<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
    </group>

    <item android:title="Denuncia">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/sym_action_call"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_call"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_share1"
                android:icon="@android:drawable/sym_action_call"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send1"
                android:icon="@android:drawable/ic_menu_call"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
