<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DinamicaDetailActivity"
    tools:showIn="@layout/activity_dinamica_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

            <TextView
                android:id="@+id/txtTiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#7CD860" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yanone_kaffeesatz"
            android:text="@string/descripcion"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/yanone_kaffeesatz"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yanone_kaffeesatz"
            android:text="@string/objetivos"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtObjetivos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yanone_kaffeesatz"
            android:text="@string/ejetematico"
            android:textSize="18sp"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/listaEjes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp"
                android:showDividers="middle"/>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yanone_kaffeesatz"
            android:text="@string/dirigidoa"
            android:textSize="18sp"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/listaDirigido"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp"
                android:dividerPadding="5dp"/>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yanone_kaffeesatz"
            android:text="@string/recursos"
            android:textSize="18sp"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/listaRecursos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp" />
        </HorizontalScrollView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yanone_kaffeesatz"
            android:text="@string/participantes"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/dibujomaestro" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/iconitoalumnos" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>